
- Bug fixes:
  - *whichAreBijection* and *whichAreInDouble* are using *bi_col_test* which was not working with 2 column data set. It is fixed.

- Other changes: 
  - Changed *whichAreIncluded* example since it was to slow for CRAN. Also it might be a little bit more explicit now.
  - Changed *aggregateByKey* example since it was to slow for CRAN.

- Integration:
  - Rewrite all *whichFunction.R*, *aggregate.R*, *numericsManuipulations.R*, *sameShape.R*, "prepareSet.R" tests to make them more readable
  - Rewrite some of *generericFunctions.R* tests to make them more readable

WARNING:
- In *aggregateByKey* generated column names are changed.
- In *aggregateByKey* generated column for character is different.

V 0.3.9
=======
- Integration:
  	- Matching new devtools requierments
  	- Starting to rewrite unittest to make it more readable

V 0.3.8
=======
- New features:
  	- New features in existing functions:
		- Identification of bijection through internal function *fastIsBijection* is way faster (up to 40 times faster in case of bijection). So *whichArebijection* and *fastFiltervariables* are also improved.
		- Remove remaining *gc* to save time. 
		- In *one_hot_encoder* added parameter *type* to make choise between logical or numerical results.
	  
  	  
V 0.3.7
=======
- New features:
	- New functions:
		- Function *as.POSIXct_fast* is now available. It helps to transform to POSIXct way faster (if the same date value is present multiple times in the column).
	- New features in existing functions:
		- In dates identifications, we make it faster by computing search of format only on unique values.
		- In date transformation, we made it faster by using *as.POSIXct_fast* when it is necessary.
		- Functions *findAndTransFormDates*, *findAndTransformNumerics* and *unFactor* now accept argument *cols* to limitate search.

- Bug fixes:
	- Control that over-allocate option is activated on every data.table to avoid issues with set. Package should be more robust.